# stuff-counter

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: __init__.py  __main__.py
src/exts/: counts.py
src/impl/: bot.py
src/plugins/: __init__.py  guild.py  messages.py  users.py
