[tool.poetry]
name = "wordcounter-bot"
version = "1.0.0"
description = "A bot that counts how many characters and words are in a Discord message."
authors = ["toolifelesstocode <luvuyosilubane50@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
disnake = "^2.8.1"
disnake-ext-plugins = {git = "https://github.com/Chromosomologist/disnake-ext-plugins"}
python-dotenv = "^1.0.0"
taskipy = "^1.11.0"
emoji = "^2.4.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.267"

[tool.taskipy.tasks]
start = "python -m src"

[tool.ruff]
max-line-length = 120
select = ["F", "E", "I", "ANN", "Q", "TID", "ARG", "COM"]
ignore = ["ANN101", "ANN102", "ANN201", "ANN202", "ANN204"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F403"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
